2007-12-16  Satoshi Nakagawa <artension@gmail.com>

	Changed to apply the nickname format setting to Growl notifications.

2007-12-15  Satoshi Nakagawa <artension@gmail.com>

	Added the nickname format as an option.

2007-12-15  Satoshi Nakagawa <artension@gmail.com>

	Moved "Reload Theme" menu item under View.

2007-12-15  Satoshi Nakagawa <artension@gmail.com>

	Tweaked Deep Ocean theme.

2007-12-14  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, weights for completion didn't work correctly.

2007-12-14  Satoshi Nakagawa <artension@gmail.com>

	Switched to Pasternak.

2007-12-14  Satoshi Nakagawa <artension@gmail.com>

	Tweaked Deep Ocean theme.

2007-12-14  Satoshi Nakagawa <artension@gmail.com>

	Added gradient color settings for member list selected items in a theme.
	Fixed a nil access bug in starting up.

2007-12-14  Satoshi Nakagawa <artension@gmail.com>

	Added a Pasternak client.
	Added error handling to the Pastie client.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Added the "Deep Ocean" theme.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Improved the build script to remove unnecessary files.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Fixed a nil access bug in starting up.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Tweaked the default theme and the sample theme.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Changed max lines of log views to 300.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Changed to copy a sample theme on making an user theme directory.
	Tweaked the Spring Night theme.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, themes should be sorted in the dictionary order on the preference dialog.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Completed implementation of theme for the server tree.
	Changed the Spring Night theme.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Changed a theme file name from .yml to .yaml.
