@@ -28,8 +28,6 @@
 		78211B530C5F3560004B47DA /* soundplayer.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78211B520C5F3560004B47DA /* soundplayer.rb */; };
 		7821DBDE0C2C84EA00B3EF42 /* PasteSheet.nib in Resources */ = {isa = PBXBuildFile; fileRef = 7821DBDC0C2C84EA00B3EF42 /* PasteSheet.nib */; };
 		7821DBE40C2C875700B3EF42 /* pastesheet.rb in Resources */ = {isa = PBXBuildFile; fileRef = 7821DBE30C2C875700B3EF42 /* pastesheet.rb */; };
-		78229BC20C288188001DD4C3 /* asynctcpclient.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78229B900C288188001DD4C3 /* asynctcpclient.rb */; };
-		78229BC30C288188001DD4C3 /* asynctcpserver.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78229B910C288188001DD4C3 /* asynctcpserver.rb */; };
 		78229BC40C288188001DD4C3 /* ircsocket.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78229B920C288188001DD4C3 /* ircsocket.rb */; };
 		78229BC60C288188001DD4C3 /* resolver.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78229B940C288188001DD4C3 /* resolver.rb */; };
 		78229BC70C288188001DD4C3 /* tcpclient.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78229B950C288188001DD4C3 /* tcpclient.rb */; };
@@ -88,7 +86,6 @@
 		7890B4ED0C659E5D00DF983F /* AutoOpDialog.nib in Resources */ = {isa = PBXBuildFile; fileRef = 7890B4EB0C659E5D00DF983F /* AutoOpDialog.nib */; };
 		7896BFE50D0C5E850069453A /* viewtheme.rb in Resources */ = {isa = PBXBuildFile; fileRef = 7896BFE40D0C5E850069453A /* viewtheme.rb */; };
 		7896BFE60D0C5E850069453A /* viewtheme.rb in Resources */ = {isa = PBXBuildFile; fileRef = 7896BFE40D0C5E850069453A /* viewtheme.rb */; };
-		78A808810C3DA6160073FF6B /* newtcpserver.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78A808800C3DA6160073FF6B /* newtcpserver.rb */; };
 		78AD78E40C61B8F8001E77F4 /* Localizable.strings in Resources */ = {isa = PBXBuildFile; fileRef = 78AD78E20C61B8F8001E77F4 /* Localizable.strings */; };
 		78AF96580C2C219A006D9E4D /* inputhistory.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78AF96570C2C219A006D9E4D /* inputhistory.rb */; };
 		78AFBCF50C33E314008A8FCD /* kanasupport.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78AFBCF40C33E314008A8FCD /* kanasupport.rb */; };
@@ -134,8 +131,6 @@
 		78E7F2090CB2B9D20069E9ED /* DccDialog.nib in Resources */ = {isa = PBXBuildFile; fileRef = 7817A0380BF6FFCD005C7737 /* DccDialog.nib */; };
 		78E7F20A0CB2B9D20069E9ED /* WhoisDialog.nib in Resources */ = {isa = PBXBuildFile; fileRef = 78A86AD90BFFD87500E28592 /* WhoisDialog.nib */; };
 		78E7F20B0CB2B9D20069E9ED /* NickSheet.nib in Resources */ = {isa = PBXBuildFile; fileRef = 7867EA490C227AD40017B510 /* NickSheet.nib */; };
-		78E7F20C0CB2B9D20069E9ED /* asynctcpclient.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78229B900C288188001DD4C3 /* asynctcpclient.rb */; };
-		78E7F20D0CB2B9D20069E9ED /* asynctcpserver.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78229B910C288188001DD4C3 /* asynctcpserver.rb */; };
 		78E7F20E0CB2B9D20069E9ED /* ircsocket.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78229B920C288188001DD4C3 /* ircsocket.rb */; };
 		78E7F20F0CB2B9D20069E9ED /* resolver.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78229B940C288188001DD4C3 /* resolver.rb */; };
 		78E7F2100CB2B9D20069E9ED /* tcpclient.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78229B950C288188001DD4C3 /* tcpclient.rb */; };
@@ -185,7 +180,6 @@
 		78E7F23D0CB2B9D20069E9ED /* pastesheet.rb in Resources */ = {isa = PBXBuildFile; fileRef = 7821DBE30C2C875700B3EF42 /* pastesheet.rb */; };
 		78E7F23E0CB2B9D20069E9ED /* splitter.rb in Resources */ = {isa = PBXBuildFile; fileRef = 780D09EF0C2F2C20007C0F4F /* splitter.rb */; };
 		78E7F23F0CB2B9D20069E9ED /* kanasupport.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78AFBCF40C33E314008A8FCD /* kanasupport.rb */; };
-		78E7F2400CB2B9D20069E9ED /* newtcpserver.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78A808800C3DA6160073FF6B /* newtcpserver.rb */; };
 		78E7F2410CB2B9D20069E9ED /* TreeDialog.nib in Resources */ = {isa = PBXBuildFile; fileRef = 78DA4E910C460DAC008780C8 /* TreeDialog.nib */; };
 		78E7F2420CB2B9D20069E9ED /* treedialog.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78DA4EA40C46180F008780C8 /* treedialog.rb */; };
 		78E7F2430CB2B9D20069E9ED /* memberlistview.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78DA4EBF0C461D52008780C8 /* memberlistview.rb */; };
@@ -263,8 +257,6 @@
 		78211B520C5F3560004B47DA /* soundplayer.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = soundplayer.rb; sourceTree = "<group>"; };
 		7821DBDD0C2C84EA00B3EF42 /* English */ = {isa = PBXFileReference; lastKnownFileType = wrapper.nib; name = English; path = English.lproj/PasteSheet.nib; sourceTree = "<group>"; };
 		7821DBE30C2C875700B3EF42 /* pastesheet.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = pastesheet.rb; sourceTree = "<group>"; };
-		78229B900C288188001DD4C3 /* asynctcpclient.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = asynctcpclient.rb; sourceTree = "<group>"; };
-		78229B910C288188001DD4C3 /* asynctcpserver.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = asynctcpserver.rb; sourceTree = "<group>"; };
 		78229B920C288188001DD4C3 /* ircsocket.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = ircsocket.rb; sourceTree = "<group>"; };
 		78229B940C288188001DD4C3 /* resolver.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = resolver.rb; sourceTree = "<group>"; };
 		78229B950C288188001DD4C3 /* tcpclient.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = tcpclient.rb; sourceTree = "<group>"; };
@@ -324,7 +316,6 @@
 		7890B4E80C659E4700DF983F /* autoopdialog.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = autoopdialog.rb; sourceTree = "<group>"; };
 		7890B4EC0C659E5D00DF983F /* English */ = {isa = PBXFileReference; lastKnownFileType = wrapper.nib; name = English; path = English.lproj/AutoOpDialog.nib; sourceTree = "<group>"; };
 		7896BFE40D0C5E850069453A /* viewtheme.rb */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.script.ruby; path = viewtheme.rb; sourceTree = "<group>"; };
-		78A808800C3DA6160073FF6B /* newtcpserver.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = newtcpserver.rb; sourceTree = "<group>"; };
 		78A86ADA0BFFD87500E28592 /* English */ = {isa = PBXFileReference; lastKnownFileType = wrapper.nib; name = English; path = English.lproj/WhoisDialog.nib; sourceTree = "<group>"; };
 		78AD78E30C61B8F8001E77F4 /* English */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.plist.strings; name = English; path = English.lproj/Localizable.strings; sourceTree = "<group>"; };
 		78AF96570C2C219A006D9E4D /* inputhistory.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = inputhistory.rb; sourceTree = "<group>"; };
@@ -476,10 +467,7 @@
 		78229B8F0C288188001DD4C3 /* component */ = {
 			isa = PBXGroup;
 			children = (
-				78A808800C3DA6160073FF6B /* newtcpserver.rb */,
 				78AF96570C2C219A006D9E4D /* inputhistory.rb */,
-				78229B900C288188001DD4C3 /* asynctcpclient.rb */,
-				78229B910C288188001DD4C3 /* asynctcpserver.rb */,
 				78229B920C288188001DD4C3 /* ircsocket.rb */,
 				78229B940C288188001DD4C3 /* resolver.rb */,
 				78229B950C288188001DD4C3 /* tcpclient.rb */,
@@ -691,8 +679,6 @@
 				78E572660C1C30CE00BDF7EC /* DccDialog.nib in Resources */,
 				78E572690C1C30CE00BDF7EC /* WhoisDialog.nib in Resources */,
 				7867EA4B0C227AD40017B510 /* NickSheet.nib in Resources */,
-				78229BC20C288188001DD4C3 /* asynctcpclient.rb in Resources */,
-				78229BC30C288188001DD4C3 /* asynctcpserver.rb in Resources */,
 				78229BC40C288188001DD4C3 /* ircsocket.rb in Resources */,
 				78229BC60C288188001DD4C3 /* resolver.rb in Resources */,
 				78229BC70C288188001DD4C3 /* tcpclient.rb in Resources */,
@@ -742,7 +728,6 @@
 				7821DBE40C2C875700B3EF42 /* pastesheet.rb in Resources */,
 				780D09F00C2F2C20007C0F4F /* splitter.rb in Resources */,
 				78AFBCF50C33E314008A8FCD /* kanasupport.rb in Resources */,
-				78A808810C3DA6160073FF6B /* newtcpserver.rb in Resources */,
 				78DA4E930C460DAC008780C8 /* TreeDialog.nib in Resources */,
 				78DA4EA50C46180F008780C8 /* treedialog.rb in Resources */,
 				78DA4EC10C461D52008780C8 /* memberlistview.rb in Resources */,
@@ -783,8 +768,6 @@
 				78E7F2090CB2B9D20069E9ED /* DccDialog.nib in Resources */,
 				78E7F20A0CB2B9D20069E9ED /* WhoisDialog.nib in Resources */,
 				78E7F20B0CB2B9D20069E9ED /* NickSheet.nib in Resources */,
-				78E7F20C0CB2B9D20069E9ED /* asynctcpclient.rb in Resources */,
-				78E7F20D0CB2B9D20069E9ED /* asynctcpserver.rb in Resources */,
 				78E7F20E0CB2B9D20069E9ED /* ircsocket.rb in Resources */,
 				78E7F20F0CB2B9D20069E9ED /* resolver.rb in Resources */,
 				78E7F2100CB2B9D20069E9ED /* tcpclient.rb in Resources */,
@@ -834,7 +817,6 @@
 				78E7F23D0CB2B9D20069E9ED /* pastesheet.rb in Resources */,
 				78E7F23E0CB2B9D20069E9ED /* splitter.rb in Resources */,
 				78E7F23F0CB2B9D20069E9ED /* kanasupport.rb in Resources */,
-				78E7F2400CB2B9D20069E9ED /* newtcpserver.rb in Resources */,
 				78E7F2410CB2B9D20069E9ED /* TreeDialog.nib in Resources */,
 				78E7F2420CB2B9D20069E9ED /* treedialog.rb in Resources */,
 				78E7F2430CB2B9D20069E9ED /* memberlistview.rb in Resources */,
