@@ -1,3 +1,8 @@
+2007-12-17  Satoshi Nakagawa <artension@gmail.com>
+
+	Added @nick style conversation tracking for the nick completion.
+	Removed unnecessary files.
+
 2007-12-16  Satoshi Nakagawa <artension@gmail.com>
 
 	Changed to apply the nickname format setting to Growl notifications.
